Motorcycle shop project
Motorcycle shop project for as an asigment

--- a/part1.html
+++ b/part1.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <link rel="stylesheet" href="part1.css">
+<link rel="stylesheet" href="AboutUS.html">
+<link rel="stylesheet" href="TopDown.html">
 
 <head>
     <meta charset="UTF-8">
@@ -25,19 +27,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link" href="http://127.0.0.1:5501/part1.html">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="http://127.0.0.1:5501/AboutUS.html">AboutUS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Page</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">TopDown</a>
+                    <a class="nav-link" href="http://127.0.0.1:5501/TopDown.html">TopDown</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Galery</a>
+                    <a class="nav-link" href="#">Galery</a>
                 </li>
             </ul>
             <input type="search" placeholder="Search..">
@@ -123,7 +125,8 @@
                                 class="fa fa-facebook">facebook</a></li>
                         <li> <a href="https://twitter.com/i/flow/login" class="fa fa-twitter">twitter</a></li>
                         <li><a href="https://www.linkedin.com/login" class="fa fa-linkedin">linkedin</a></li>
-                        <li><a href="https://www.instagram.com/accounts/login/" class="fa fa-instagram">instagram</a></li>
+                        <li><a href="https://www.instagram.com/accounts/login/" class="fa fa-instagram">instagram</a>
+                        </li>
                         <li><a href="https://www.reddit.com/login/" class="fa fa-reddit">reddit</a></li>
                         <li>
                             <p>If you like our website why not let other know about us! </p>
